[package]
name = "dotspace"
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "Explore your Graphviz dot files in interactive 3D space"
repository = "https://github.com/navicore/dotspace"
readme = "README.md"
keywords = ["graphviz", "dot", "visualization", "3d", "interactive"]
categories = ["visualization", "graphics"]

[dependencies]
bevy = "0.16"
bevy_panorbit_camera = "0.27"
dotparser = "0.3"
petgraph = "0.8"
clap = { version = "4.5", features = ["derive"] }
